# HighPerf-Snake-Server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
client/: CMakeLists.txt
client/include/: GameClient.hpp  NetworkClient.hpp  VisualSegment.h
client/src/: GameClient.cpp  NetworkClient.cpp  main.cpp
k8s/: 01-configmap.yaml
leaderboard/: app.py
server/: CMakeLists.txt
server/include/: DatabaseManager.hpp  Server.hpp
server/src/: DatabaseManager.cpp  Server.cpp  main.cpp
shared/: CMakeLists.txt
shared/include/: Protocol.hpp
